Rewritted for jdk-17