@@ -10,7 +10,7 @@ import org.example.model.Context;
 public class SaveCommand implements Command {
     @Override
     public CommandResult execute(Context ctx, CommandArgs args) {
-        String path = ((StringField)(args.getFields().getFirst())).getValue();
+        String path = ((StringField)(args.getFields().get(0))).getValue();
         if (path == null) {
             var ctx_args = ctx.getArgs();
             if (ctx.getArgs() == null || ctx.getArgs().length == 0) {
