@@ -16,7 +16,7 @@ public class UpdateCommand implements Command {
     public CommandResult execute(Context ctx, CommandArgs args) {
         var fields = args.getFields();
         var mb = new MusicBandBuilder(new ArrayList<>(fields.subList(1, fields.size()))).build();
-        ctx.update((int)(fields.getFirst().getValue()), mb);
+        ctx.update((int)(fields.get(0).getValue()), mb);
         return new CommandResult("Объект успешно обновлён", null, false);
     }
 
